[gd_scene load_steps=11 format=2]

[ext_resource path="res://resources/playable_vehicles/boat.png" type="Texture" id=1]
[ext_resource path="res://scenes/scripts/boat.gd" type="Script" id=2]
[ext_resource path="res://resources/controls_overlay/power_lever.png" type="Texture" id=3]
[ext_resource path="res://resources/controls_overlay/power_frame.png" type="Texture" id=4]
[ext_resource path="res://resources/controls_overlay/circular_button.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 18 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 40.0
height = 35.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 100.0
height = 35.0

[sub_resource type="CircleShape2D" id=3]
radius = 24.0

[sub_resource type="CircleShape2D" id=4]
radius = 24.0

[node name="Boat" type="Node2D"]
script = ExtResource( 2 )

[node name="Frame" type="Sprite" parent="."]
position = Vector2( 70.0378, -68.5938 )
z_index = 10
texture = ExtResource( 4 )

[node name="Lever" type="Area2D" parent="."]
z_index = 10
collision_layer = 8
collision_mask = 0

[node name="LeverSprite" type="Sprite" parent="Lever"]
position = Vector2( 71.0978, -27.5816 )
texture = ExtResource( 3 )

[node name="LeverCollision" type="CollisionShape2D" parent="Lever"]
visible = false
light_mask = 0
position = Vector2( 71.0978, -27.5816 )
shape = SubResource( 1 )

[node name="Boat" type="KinematicBody2D" parent="."]
position = Vector2( 0, -37.5 )
rotation = 6.28319
collision_layer = 2

[node name="BoatSprite" type="Sprite" parent="Boat"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="BoatCollision" type="CollisionPolygon2D" parent="Boat"]
scale = Vector2( 2, 2 )
polygon = PoolVector2Array( 10, -37.5, 20, -27.5, 20, 32, 16.5, 37.5, 13, 32, 13, 27.5, -13, 27.5, -13, 32, -16.5, 37.5, -20, 32, -20, -27.5, -10, -37.5 )

[node name="AnchorageArea" type="Area2D" parent="Boat"]
scale = Vector2( 2, 2 )
collision_layer = 16
collision_mask = 4

[node name="AnchorageCollision" type="CollisionShape2D" parent="Boat/AnchorageArea"]
shape = SubResource( 2 )

[node name="RescueArea" type="Area2D" parent="Boat"]
scale = Vector2( 2, 2 )
collision_layer = 16
collision_mask = 32

[node name="RescueCollision" type="CollisionShape2D" parent="Boat/RescueArea"]
shape = SubResource( 5 )

[node name="AnchorButton" type="Area2D" parent="."]
position = Vector2( 197.808, -25.8284 )
z_index = 10
collision_layer = 8
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="AnchorSprite" type="Sprite" parent="AnchorButton"]
texture = ExtResource( 5 )

[node name="AnchorCollision" type="CollisionShape2D" parent="AnchorButton"]
visible = false
shape = SubResource( 3 )

[node name="RescueButton" type="Area2D" parent="."]
position = Vector2( 269.859, -23.9748 )
collision_layer = 8
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="RescueSprite" type="Sprite" parent="RescueButton"]
texture = ExtResource( 5 )

[node name="RescueCollision" type="CollisionShape2D" parent="RescueButton"]
shape = SubResource( 4 )

[connection signal="input_event" from="Lever" to="." method="_on_Lever_input_event"]
[connection signal="input_event" from="AnchorButton" to="." method="_on_AnchorButton_input_event"]
[connection signal="input_event" from="RescueButton" to="." method="_on_RescueButton_input_event"]
